[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Textures/HUD/TV.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mechanics/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Shader/Retro_TV.tres" type="Shader" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/scanline_count = 50.0

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
material = SubResource( 1 )
anchor_right = 7.607
anchor_bottom = 4.004
margin_left = -116.0
margin_top = -39.0
margin_right = -148.28
margin_bottom = -77.16

[node name="ButtonContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -35.5
margin_bottom = 35.5
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="NewGame" parent="Panel/ButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 272.0
margin_bottom = 21.0
text = "NEW GAME"

[node name="LoadLevel" parent="Panel/ButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 272.0
margin_bottom = 46.0
text = "LOAD LEVEL"

[node name="Exit" parent="Panel/ButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 272.0
margin_bottom = 71.0
text = "EXIT"

[node name="LevelButtonContainer" type="VBoxContainer" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="level1" parent="Panel/LevelButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 272.0
margin_bottom = 21.0
text = "Level 1"

[node name="level2" parent="Panel/LevelButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 272.0
margin_bottom = 46.0
text = "Level 2"

[node name="level3" parent="Panel/LevelButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 272.0
margin_bottom = 71.0
text = "level 3"

[node name="level4" parent="Panel/LevelButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 75.0
margin_right = 272.0
margin_bottom = 96.0
text = "level 4"

[node name="return" parent="Panel/LevelButtonContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 272.0
margin_bottom = 121.0
text = "return"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.027
anchor_top = 0.023
anchor_right = 1.0
anchor_bottom = 1.069
margin_left = -8.208
margin_top = -9.68
margin_bottom = -6.04001
texture = ExtResource( 1 )
stretch_mode = 6
